--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,10 +3,132 @@
 //-----------------------------------------
 @import 'variables';
 
+$brand-primary: red;
+
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
 .outline {
   border: 1px solid black;
   min-height: 20px;
+}
+
+.account_nav {
+  background: black;
+  color: white;
+
+  p {
+    margin-top: 8px;
+    font-size: 10px;
+    text-transform: uppercase;
+  }
+
+  .form-inline {
+
+    input.form-control {
+      border-radius: 0;
+      background: #444;
+      color: #ccc;
+      border: none;
+      width: 150px;
+      font-size: 10px;
+    }
+
+    .btn {
+      border-radius: 0;
+      border: none;
+      text-transform: uppercase;
+      font-size: 10px;
+    }
+  }
+}
+
+.category_nav {
+  .logo {
+    padding: 20px;
+    img {
+      max-height: 65px;
+    }
+  }
+  ul {
+    margin-top: 20px;
+    list-style-type: none;
+    padding: 0;
+
+    li {
+      display: inline;
+      margin-right: 50px;
+
+      img {
+        max-height: 65px;
+        display: inline;
+      }
+    }
+  }
+}
+
+.centered {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.category_index {
+  background: #ddd;
+  color: white;
+
+  .latest {
+    background: white;
+    color: black;
+  }
+  .byline {
+    text-transform: uppercase;
+    color: #ccc;
+  }
+
+  h1 {
+    font-size: 30px;
+
+    &.tech {
+      background: image-url( "badge_tech.png" );
+      background-repeat: no-repeat;
+      background-size: 30px 30px;
+      padding-left: 35px;
+    }
+    &.culture {
+      background: image-url( "badge_culture.png" );
+      background-repeat: no-repeat;
+      background-size: 30px 30px;
+      padding-left: 35px;
+    }
+  }
+
+  .article_row {
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
+    padding-top: 30px;
+  }
+
+  .breaking {
+    color: black;
+
+    .byline {
+      color: #333;
+    }
+    .row {
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 10px;
+      padding-top: 10px;
+    }
+  }
+}
+
+.ourfooter {
+  padding-top: 25px;
+  padding-bottom: 25px;
+  background: black;
+  color: white;
+  text-align: center;
+  img {
+    max-height: 62px;
+  }
 }
