Feeling really friendly

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,6 +3,7 @@
 //-----------------------------------------
 @import 'variables';
 
+// Hey guys
 $brand-primary: red;
 
 @import 'bootstrap-sprockets';
