--- a/app/views/static/article.html.erb
+++ b/app/views/static/article.html.erb
@@ -1,2 +1,71 @@
-<h1>Static#article</h1>
-<p>Find me in app/views/static/article.html.erb</p>
+<div class="container-fluid">
+  <%= render "account_nav" %>
+
+  <%= render "category_nav" %>
+
+  <div class="row category_index">
+    <div class="col-md-8 article">
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+          <div class="row">
+            <div class="col-md-12">
+              <img src="http://placehold.it/1000x700" class="img-responsive"/>
+            </div>
+          </div>
+
+          <div class="row thumbnailrow">
+            <div class="col-xs-3">
+              <img src="http://placehold.it/300x150" class="img-responsive"/>
+            </div>
+            <div class="col-xs-3">
+              <img src="http://placehold.it/300x150" class="img-responsive"/>
+            </div>
+            <div class="col-xs-3">
+              <img src="http://placehold.it/300x150" class="img-responsive"/>
+            </div>
+            <div class="col-xs-3">
+              <img src="http://placehold.it/300x150" class="img-responsive"/>
+            </div>
+          </div>
+          <h1>Article Title</h1>
+
+          <p class="byline">By blah blah blah</p>
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis nisi laoreet, sodales sem vitae, scelerisque elit. Donec sit amet arcu tortor. Ut imperdiet rutrum turpis vel ullamcorper. Ut in suscipit tellus. Aliquam orci diam, maximus nec purus et, consequat scelerisque diam. Vestibulum quis vulputate velit. Aenean non interdum mauris. Proin vel convallis orci, vel congue leo. Nulla sit amet tempor justo. In hac habitasse platea dictumst. Suspendisse a tincidunt nisi. Etiam posuere rutrum eros ultricies sollicitudin. Fusce auctor nibh in dapibus vehicula. Sed auctor faucibus nulla id porttitor.
+          </p>
+          <p>
+            Ut sodales ultricies nibh vitae dictum. In justo libero, eleifend vel pharetra vitae, dignissim non massa. Morbi sed consequat dui, ac feugiat elit. Integer lacinia auctor aliquam. Cras vel est vehicula augue interdum dignissim sed vel lectus. Aliquam eu nulla a libero scelerisque tincidunt vel vitae metus. Nam eget elit porta, sollicitudin ipsum vitae, tincidunt enim. Nam rutrum, libero ut pulvinar laoreet, purus magna sagittis urna, sed vestibulum orci tortor vitae metus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut varius orci sapien, eu tincidunt tortor volutpat at. Sed sed ipsum sit amet purus dapibus vulputate. Fusce sagittis ultricies pellentesque.
+          </p>
+
+          <p>
+            Phasellus interdum in quam non varius. Duis porttitor volutpat tincidunt. Mauris blandit, nibh quis eleifend finibus, lorem nisl tempus nibh, ut dapibus nulla risus eu erat. Sed lacinia arcu est, sed porttitor sem viverra eget. Morbi convallis fringilla interdum. Sed cursus sapien ex, ut sagittis metus blandit id. Fusce imperdiet at ipsum ut rutrum. Etiam lacinia aliquam magna, at tincidunt ex.
+          </p>
+
+          <p>
+            Proin eleifend, felis nec dapibus aliquam, lectus neque tincidunt justo, et pulvinar felis enim non mi. Morbi dictum mollis lorem, rhoncus varius magna tempor id. Aliquam interdum, lacus a venenatis laoreet, velit ipsum sollicitudin nibh, quis iaculis lectus lacus at quam. Ut convallis arcu et maximus dictum. Proin a massa in tortor mollis iaculis. Donec sed malesuada ligula. Quisque eget nulla vel est malesuada vehicula. Curabitur volutpat ultrices risus, eget fermentum massa euismod eget. Sed vel porttitor sapien. Praesent ornare metus nulla, at dapibus justo fermentum eu. Pellentesque non lobortis ex. Integer semper, odio et luctus feugiat, nibh mauris varius neque, quis auctor orci nulla nec leo. Mauris vitae ante sed ipsum viverra scelerisque. Aliquam et pharetra eros. Duis laoreet pretium lacus non congue. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+        </div>
+      </div>
+      <div class="row about_author">
+        <div class="col-md-10 col-md-offset-1">
+          <h1><span>About author</span></h1>
+        </div>
+      </div>
+
+      <div class="row about_author">
+        <div class="col-md-1">
+          <img src="http://placehold.it/100x100" class="img-responsive avatar"/>
+        </div>
+        <div class="col-md-10">
+          <p>
+            Proin eleifend, felis nec dapibus aliquam, lectus neque tincidunt justo, et pulvinar felis enim non mi. Morbi dictum mollis lorem, rhoncus varius magna tempor id. Aliquam interdum, lacus a venenatis laoreet, velit ipsum sollicitudin nibh, quis iaculis lectus lacus at quam. Ut convallis arcu et maximus dictum. Proin a massa in tortor mollis iaculis. Donec sed malesuada ligula. Quisque eget nulla vel est malesuada vehicula. Curabitur volutpat ultrices risus, eget fermentum massa euismod eget. Sed vel porttitor sapien. Praesent ornare metus nulla, at dapibus justo fermentum eu. Pellentesque non lobortis ex. Integer semper, odio et luctus feugiat, nibh mauris varius neque, quis auctor orci nulla nec leo. Mauris vitae ante sed ipsum viverra scelerisque. Aliquam et pharetra eros. Duis laoreet pretium lacus non congue. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+        </div>
+      </div>
+    </div>
+    <%= render "breaking" %>
+  </div> <!-- category_index -->
+
+  <%= render "ourfooter" %>
+</div>
