--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,1 +1,21 @@
-index.html.erb
+<div class="container-fluid">
+  <%= render "account_nav" %>
+
+  <%= render "category_nav" %>
+
+  <div class="row homepage_nav">
+    <div class="col-xs-2 control">
+      <img src="<%= image_url "left_carousel.png" %>" class="img-responsive">
+    </div>
+
+    <div class="col-xs-8">
+      <img src="<%= image_url "chair_carousel.png" %>" class="img-responsive">
+    </div>
+
+    <div class="col-xs-2 control">
+      <img src="<%= image_url "right_carousel.png" %>" class="img-responsive">
+    </div>    
+  </div>
+
+  <%= render "ourfooter" %>
+</div>
