--- a/app/views/static/_latest.html.erb
+++ b/app/views/static/_latest.html.erb
@@ -18,6 +18,9 @@
         <p>All work and no play makes Jack a dull boy. All work and no play makes Jack a dull boy. All work and no play makes Jack a dull boy. All work and no play makes Jack a dull boy. All work and no play makes Jack a dull boy. </p>
       </div>
     </div>
+
+    <hr class="article-divider">
+
   <% end %>
 
   <div class="row">
