--- a/app/views/static/_account_nav.html.erb
+++ b/app/views/static/_account_nav.html.erb
@@ -8,10 +8,10 @@
 
   <div class="col-md-6 col-md-offset-2">
     <form class="form-inline pull-right">
-      <input type="text" name="username" placeholder="Username" class="form-control"/>
+      <input type="text" name="username" placeholder="Username" class="form-control" autocomplete="off"/>
 
       <div class="input-group">
-        <input type="password" name="password" placeholder="Password" class="form-control"/>
+        <input type="password" name="password" placeholder="Password" class="form-control" autocomplete="off"/>
         <span class="input-group-btn">
           <button class="btn btn-default" type="button">
             <span class="circle">
