--- a/app/views/static/_category_nav.html.erb
+++ b/app/views/static/_category_nav.html.erb
@@ -1,13 +1,39 @@
 <div class="row category_nav">
   <div class="col-md-2 logo"><img src="<%= image_url "daft_logo.png" %>" class="img-responsive"/></div>
-  <div class="col-md-10">
-    <ul>
-      <li><a href="#"><img src="<%= image_url "nav_tech.png" %>" class="img-responsive"/></a></li>
-      <li><a href="#"><img src="<%= image_url "nav_finance.png" %>" class="img-responsive"/></a></li>
-      <li><a href="#"><img src="<%= image_url "nav_art.png" %>" class="img-responsive"/></a></li>
-      <li><a href="#"><img src="<%= image_url "nav_music.png" %>" class="img-responsive"/></a></li>
-      <li><a href="#"><img src="<%= image_url "nav_food.png" %>" class="img-responsive"/></a></li>
-      <li><a href="#"><img src="<%= image_url "nav_culture.png" %>" class="img-responsive"/></a></li>
-    </ul>
+
+  <div class="col-md-8 col-md-offset-1">
+    
+    <div class="row category-list">
+
+      <div class="col-md-2 category-item active category-tech">
+        <a href="#"><img src="<%= image_url "nav_tech.png" %>" class="img-responsive"/></a>
+      </div>
+      
+      <div class="col-md-2 category-item category-finance">
+        <a href="#"><img src="<%= image_url "nav_finance.png" %>" class="img-responsive"/></a>
+      </div>
+      
+      <div class="col-md-2 category-item category-art">
+        <a href="#"><img src="<%= image_url "nav_art.png" %>" class="img-responsive"/></a>
+      </div>
+      
+      <div class="col-md-2 category-item category-music">
+        <a href="#"><img src="<%= image_url "nav_music.png" %>" class="img-responsive"/></a>
+      </div>
+      
+      <div class="col-md-2 category-item category-food">
+        <a href="#"><img src="<%= image_url "nav_food.png" %>" class="img-responsive"/></a>
+      </div>
+      
+      <div class="col-md-2 category-item category-culture">
+        <a href="#"><img src="<%= image_url "nav_culture.png" %>" class="img-responsive"/></a>
+      </div>
+      
+    </div>
+    
+
   </div>
+
 </div> <!-- category_nav -->
+
+<div class="category-nav-stripes row"></div>
