Use noto sans + noto serif from google fonts

--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -1,7 +1,7 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,700,300,600);
+@import url(http://fonts.googleapis.com/css?family=Noto+Sans:400,700%7CNoto+Serif:400,700);
 
-$font-family-sans-serif: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-family-serif: Georgia, "Times New Roman", Times, serif;
+$font-family-sans-serif: 'Noto Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-serif: "Noto Serif", Times, serif;
 
 $font-family-base: $font-family-serif;
 
