--- a/app/views/static/_breaking.html
+++ b/app/views/static/_breaking.html
@@ -1,17 +1,38 @@
 <div class="col-md-4 breaking">
-  <h2>Breaking News</h2>
+  
+  <div class="row">
+    <div class="col-md-8 col-md-offset-3">
+      <h2>Breaking News</h2>
+    </div>
+  </div>
+
+  
+  <div class="row">
+    <div class="col-md-9 col-md-offset-3">
+      <hr>
+    </div>
+  </div>
+
 
   <% 6.times do %>
     <div class="row">
-      <div class="col-md-2 col-md-offset-1 text-centered">
-        <img src="<%= image_url "badge_finance.png" %>" class="img-responsive"/>
+      <div class="col-md-3 text-right">
+        <img src="<%= image_url "icon_finance.png" %>" class=""/>
       </div>
 
       <div class="col-md-8">
-        <p>Blah de blah blah</p>
+        <p>Asexually Reproducing Sea Sponge Worried She's Turning Into Herself</p>
         <p class="byline">By Dr. Seuss</p>
       </div>
     </div>
+
+  
+    <div class="row">
+      <div class="col-md-9 col-md-offset-3">
+        <hr>
+      </div>
+    </div>
+
   <% end %>
 
 </div>
