--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -8,6 +8,7 @@ $font-family-base: $font-family-serif;
 
 $brand-primary: #ec6646;
 $dark-gray: #999;
+$sidebar-gray: #f7f5f1;
 
 $pagination-border: none;
 $pagination-color: black;
