--- a/app/views/static/new.html.erb
+++ b/app/views/static/new.html.erb
@@ -3,10 +3,9 @@
 
   <%= render "category_nav" %>
 
-  <div class="row category_index">
-    <%= render "latest" %>
-    <%= render "breaking" %>
-  </div> <!-- category_index -->
+  <div class="row new_article">
+    <%= render "form" %>
+  </div>
 
   <%= render "ourfooter" %>
 </div>
