--- a/app/views/static/edit.html.erb
+++ b/app/views/static/edit.html.erb
@@ -1,12 +1,3 @@
-<div class="container-fluid">
-  <%= render "account_nav" %>
+Nope, it's in new.html.erb!
 
-  <%= render "category_nav" %>
-
-  <div class="row category_index">
-    <%= render "latest" %>
-    <%= render "breaking" %>
-  </div> <!-- category_index -->
-
-  <%= render "ourfooter" %>
-</div>
+Which really just includes the _form.html.erb partial!
