Make hidden file fields clickable via labels

--- a/app/views/static/_form.html.erb
+++ b/app/views/static/_form.html.erb
@@ -8,33 +8,41 @@
 
           <div class="col-md-3">
             <div class="panel panel-default text-center">
-              <img src="<%=image_url('add_photo_icon.png')%>" class="photo-placeholder">
-              Photo 1
-              <input type="file"></input>
+              <label for="post_photo_1">
+                <img src="<%=image_url('add_photo_icon.png')%>" class="photo-placeholder">
+                Photo 1
+                <input type="file" id="post_photo_1"></input>
+              </label>
             </div>
           </div>
 
           <div class="col-md-3">
             <div class="panel panel-default text-center">
-              <img src="<%=image_url('add_photo_icon.png')%>" class="photo-placeholder">
-              Photo 2
-              <input type="file"></input>
+              <label for="post_photo_2">
+                <img src="<%=image_url('add_photo_icon.png')%>" class="photo-placeholder">
+                Photo 2
+                <input type="file" id="post_photo_2"></input>
+              </label>
             </div>
           </div>
 
           <div class="col-md-3">
             <div class="panel panel-default text-center">
-              <img src="<%=image_url('add_photo_icon.png')%>" class="photo-placeholder">
-              Photo 3
-              <input type="file"></input>
+              <label for="post_photo_3">
+                <img src="<%=image_url('add_photo_icon.png')%>" class="photo-placeholder">
+                Photo 3
+                <input type="file" id="post_photo_3"></input>
+              </label>
             </div>
           </div>
 
           <div class="col-md-3">
             <div class="panel panel-default text-center">
-              <img src="<%=image_url('add_photo_icon.png')%>" class="photo-placeholder">
-              Photo 4
-              <input type="file"></input>
+              <label for="post_photo_3">
+                <img src="<%=image_url('add_photo_icon.png')%>" class="photo-placeholder">
+                Photo 4
+                <input type="file" id="post_photo_4"></input>
+              </label>
             </div>
           </div>
         </div>
