--- a/app/views/static/_form.html.erb
+++ b/app/views/static/_form.html.erb
@@ -8,11 +8,13 @@
 
           <div class="col-md-3">
             <div class="panel panel-default text-center">
-              <label for="post_photo_1">
-                <img src="<%=image_url('add_photo_icon.png')%>" class="photo-placeholder">
-                Photo 1
-                <input type="file" id="post_photo_1"></input>
-              </label>
+              <div class="panel-body">
+                <label for="post_photo_1">
+                  <img src="<%=image_url('add_photo_icon.png')%>" class="photo-placeholder">
+                  Photo 1
+                  <input type="file" id="post_photo_1"></input>
+                </label>
+              </div>
             </div>
           </div>
 
