Commit today's changes as we wire up articles

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -4,7 +4,7 @@
   <%= render "static/category_nav" %>
 
   <div class="row new_article">
-    <%= render "static/form" %>
+    <%= render "form" %>
   </div>
 
   <%= render "static/ourfooter" %>
