--- a/app/views/static/_account_nav.html.erb
+++ b/app/views/static/_account_nav.html.erb
@@ -9,7 +9,7 @@
   <div class="col-md-6 col-md-offset-2">
     <form class="form-inline pull-right">
 
-      <%= link_to 'Create Article', new_article_path %>
+      <%= link_to( 'Create Article', new_article_path ) %>
 
       <input type="text" name="username" placeholder="Username" class="form-control" autocomplete="off"/>
 
