Show the five most recent articles in the breaking news section

--- a/app/views/static/_breaking.html
+++ b/app/views/static/_breaking.html
@@ -14,15 +14,15 @@
   </div>
 
 
-  <% 6.times do %>
+  <% @articles.each do |article| %>
     <div class="row">
       <div class="col-md-3 text-right">
         <img src="<%= image_url "icon_finance.png" %>" class=""/>
       </div>
 
       <div class="col-md-8">
-        <p>Asexually Reproducing Sea Sponge Worried She's Turning Into Herself</p>
-        <p class="byline">By Dr. Seuss</p>
+        <p><%= link_to article.title, article_path(article) %> </p>
+        <p class="byline">By <%= article.author %></p>
       </div>
     </div>
 
