UI work from Wednesday

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -70,36 +70,31 @@
     }
   }
 
+
+  .category-list.tech .category-tech {
+    border-bottom: 15px solid #50cfaa;
+  }
+  .category-list.finance .category-finance {
+    border-bottom: 15px solid green;
+  }
+  .category-list.art .category-art {
+    border-bottom: 15px solid purple;
+  }
+  .category-list.music .category-music {
+    border-bottom: 15px solid blue;
+  }
+  .category-list.food .category-food {
+    border-bottom: 15px solid yellow;
+  }
+  .category-list.culture .category-culture {
+    border-bottom: 15px solid red;
+  }
+
   .category-list {
     .category-item {
 
       height: 120px;
       text-align: center;
-
-      &.active {
-
-        border-bottom-width: 15px;
-        border-bottom-style: solid;
-
-        &.category-tech {
-          border-bottom-color: #50cfaa;
-        }
-        &.category-finance {
-          border-bottom-color: green;
-        }
-        &.category-art {
-          border-bottom-color: purple;
-        }
-        &.category-music {
-          border-bottom-color: blue;
-        }
-        &.category-food {
-          border-bottom-color: yellow;
-        }
-        &.category-culture {
-          border-bottom-color: red;
-        }
-      }
 
       a {
         padding-top: 30px;
