--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -25,15 +25,15 @@
 
       <hr>
       
-      <% 5.times do %>
+      <% @articles.each do |article| %>
         <div class="row homepage_article text-left">
           <div class="col-md-3">
             <img src="http://placehold.it/400x300" class="img-responsive">
           </div>
           <div class="col-md-9">
-            <h2 class="title">Nasa announces plans to launch chimpanzee into sun</h2>
-            <p class="byline">by Beverly T Miller // 8.1.2014</p>
-            <p class="summary">Pickled bicycle rights viral Neutra Echo Park. Bespoke sriracha Brooklyn jean shorts VHS artisan, next level Wes Anderson Williamsburg flexitarian gentrify. Master cleanse Godard lo-fi, +1 butcher hashtag meh Intelligentsia lomo slow-carb brunch.</p>
+            <h2 class="title"><%= article.title %></h2>
+            <p class="byline">by <%= article.author %> // <%= article.created_at.to_date %></p>
+            <p class="summary"><%= article.content %></p>
           </div>
         </div>
 
