--- a/app/views/static/_category_nav.html.erb
+++ b/app/views/static/_category_nav.html.erb
@@ -3,9 +3,9 @@
 
   <div class="col-md-8 col-md-offset-1">
     
-    <div class="row category-list">
+    <div class="row category-list <%= @category %>">
 
-      <div class="col-md-2 category-item active category-tech">
+      <div class="col-md-2 category-item category-tech">
         <a href="#"><img src="<%= image_url "nav_tech.png" %>" class="img-responsive"/></a>
       </div>
       
