--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,2 +1,11 @@
-<h1>Articles#edit</h1>
-<p>Find me in app/views/articles/edit.html.erb</p>
+<div class="container-fluid">
+  <%= render "static/account_nav" %>
+
+  <%= render "static/category_nav" %>
+
+  <div class="row new_article">
+    <%= render "form" %>
+  </div>
+
+  <%= render "static/ourfooter" %>
+</div>
